@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    background-color: red; /* fallback color */
+    background-image: linear-gradient( to bottom right, #fbd333, #ef9d33);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
+
+
