@@ -1,2 +1,5 @@
 2/17/2023
 - Upload a basic Angular project to github for base files
+
+2/21/2023
+- Edit stylesheet for background gradient
